--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,6 @@
 altgraph==0.17.4
+click==8.1.7
+colorama==0.4.6
 contourpy==1.3.1
 cycler==0.12.1
 fonttools==4.55.0
@@ -8,19 +10,24 @@ matplotlib==3.9.2
 numpy==2.1.3
 packaging==24.2
 pandas==2.2.3
+pefile==2023.2.7
 pillow==11.0.0
 pyinstaller==6.11.1
 pyinstaller-hooks-contrib==2024.10
 pyparsing==3.2.0
-PyQt5==5.15.11
-PyQt5-Qt5==5.15.15
-pyqt5_qt5_designer==0.0.14
+PyQt5==5.15.9
+pyqt5-plugins==5.15.9.2.3
+PyQt5-Qt5==5.15.2
+pyqt5-tools==5.15.9.3.3
 PyQt5_sip==12.15.0
 python-dateutil==2.9.0.post0
+python-dotenv==1.0.1
 pytz==2024.2
+pywin32-ctypes==0.2.3
+qt5-applications==5.15.2.2.3
+qt5-tools==5.15.2.1.3
 scikit-learn==1.5.2
 scipy==1.14.1
-setuptools==75.6.0
 six==1.16.0
 threadpoolctl==3.5.0
 tzdata==2024.2
